...
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView"
    app:layout_constraintVertical_bias="0.035" />

<Button
    android:id="@+id/visitorButton"
    android:layout_width="0dp"
    android:layout_height="53dp"
    android:layout_marginStart="56dp"
    android:layout_marginTop="80dp"
    android:layout_marginEnd="56dp"
    android:text="Visitante"
...
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

<Button
    android:id="@+id/SaveArtistbutton"
    android:layout_width="0dp"
    android:layout_height="53dp"
    android:layout_marginStart="56dp"
    android:layout_marginTop="56dp"
    android:layout_marginEnd="56dp"
    android:text="Coleccionista"
...
