<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.VisitorFragment">

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="35dp"
    android:text="Hola Visitante"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textColor="@color/darkGray"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView"
    app:layout_constraintVertical_bias="0.035" />

<Button
    android:id="@+id/artistButton"
    style="@style/CommonButtonStyle"
    android:layout_width="0dp"
    android:layout_height="53dp"
    android:layout_marginStart="56dp"
    android:layout_marginTop="80dp"
    android:layout_marginEnd="56dp"
    android:background="@drawable/common_action_button"
    android:text="Artistas"
    app:autoSizeTextType="uniform"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/AlbumButton"
        style="@style/CommonButtonStyle"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/common_action_button"
        android:text="Albums"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <Button
        android:id="@+id/collectorButton"
        style="@style/CommonButtonStyle"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/common_action_button"
        android:text="Coleccionistas"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vynils_logo"
        android:contentDescription="Logo Vynils"/>

<Button
    android:id="@+id/backButton"
    style="@style/CommonButtonStyle"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/arrow_left"
    android:contentDescription="Atras"
    app:layout_constraintBottom_toBottomOf="@+id/imageView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>