...

    <TextView
        android:id="@+id/textView"
        android:layout_width="262dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        android:text="Mis Colecciones"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/darkGray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
...
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.6" />

    <Button
    android:id="@+id/addalbumcoleccion"
    style="@style/CommonButtonStyle"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_marginEnd="32dp"
    android:background="@drawable/add_sign"
    app:layout_constraintEnd_toEndOf="parent"
...
